# locopdf

./: .gitignore  AUTHORS  configure.in
src/: Makefile.am  Makefile.in  choicebox.cpp  choicebox.h  database.cpp  database.h  dialogs.cpp  dialogs.h  entrybox.cpp  entrybox.h  keyhandler.cpp  keyhandler.h  locopdf.cpp  locopdf.h
themes/: themes_oitheme.edj
